# food-ordering-system

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/domain/: mod.rs
common/src/domain/entity/: aggregate_root.rs  base_entity.rs  mod.rs
common/src/domain/events/: domain_event.rs  mod.rs
common/src/domain/events/publisher/: domain_event_publisher.rs  mod.rs
common/src/domain/exception/: domain_exception.rs  mod.rs
common/src/domain/value_object/: base_id.rs  customer_id.rs  mod.rs  money.rs  order_approval_status.rs  order_id.rs  order_status.rs  payment_status.rs  product_id.rs  restaurant_id.rs
infrastructure/: Cargo.toml
infrastructure/docker-compose/: p.txt  (+4 more)
order-service/order-container/: Cargo.toml
order-service/order-domain/domain-application-service/: Cargo.toml
order-service/order-domain/domain-application-service/src/domain/: mod.rs  order_application_service_impl.rs  order_create_command_handler.rs  order_create_helper.rs  order_track_command_handler.rs  payment_response_message_listener_impl.rs  restaurant_approval_response_message_listener_impl.rs
order-service/order-domain/domain-application-service/src/domain/dto/: mod.rs
order-service/order-domain/domain-application-service/src/domain/dto/create/: create_order_command.rs  create_order_response.rs  mod.rs  order_address.rs  order_item.rs
order-service/order-domain/domain-application-service/src/domain/dto/message/: mod.rs  payment_response.rs  restaurant_approval_response.rs
order-service/order-domain/domain-application-service/src/domain/dto/track/: mod.rs  track_order_query.rs  track_order_response.rs
order-service/order-domain/domain-application-service/src/domain/mapper/: mod.rs  order_data_mapper.rs
order-service/order-domain/domain-application-service/src/domain/ports/input/message/listener/payment/: mod.rs  payment_response_message_listener.rs
order-service/order-domain/domain-application-service/src/domain/ports/input/message/listener/restaurant_approval/: mod.rs  restaurant_approval_response_message_listener.rs
order-service/order-domain/domain-application-service/src/domain/ports/input/service/: mod.rs  order_application_service.rs
order-service/order-domain/domain-application-service/src/domain/ports/output/repository/: customer_repository.rs  mod.rs  order_repository.rs  restaurant_repository.rs
order-service/order-domain/domain-application-service/src/domain/ports/output/repository/message/publisher/: mod.rs
order-service/order-domain/domain-application-service/src/domain/ports/output/repository/message/publisher/payment/: mod.rs  order_cancelled_payment_request_message_publisher.rs  order_created_payment_request_message_publisher.rs
order-service/order-domain/domain-application-service/src/domain/ports/output/repository/message/publisher/restaurant_approval/: mod.rs  order_paid_restaurant_request_message_publisher.rs
order-service/order-domain/domain-application-service/test/: mod.rs  order_application_service_test.rs  order_test_configuration.rs
order-service/order-domain/domain-core/: Cargo.toml
order-service/order-domain/domain-core/src/: lib.rs  main.rs
order-service/order-domain/domain-core/src/domain/: mod.rs  order_domain_service.rs  order_domain_service_impl.rs
order-service/order-domain/domain-core/src/domain/entity/: customer.rs  mod.rs  order.rs  order_item.rs  product.rs  restaurant.rs
order-service/order-domain/domain-core/src/domain/event/: mod.rs  order_cancelled_event.rs  order_created_event.rs  order_paid_event.rs
order-service/order-domain/domain-core/src/domain/exception/: mod.rs  order_domain_exception.rs  order_not_found_exception.rs
order-service/order-domain/domain-core/src/domain/value_object/: mod.rs  order_item_id.rs  street_address.rs  tracking_id.rs
(+4 files in other folders)
