[workspace]
resolver = "2"
members = [ "common", "order-service/order-application", "order-service/order-container", "order-service/order-dataaccess",
  "order-service/order-domain/domain-core",
  "order-service/order-domain/domain-service", "order-service/order-messaging",
]
package.rust-version = "1.77.2"
package.edition = "2021"
package.license = "Apache-2.0"
