[package]
name = "order-domain-application-service"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "test_order_application_service"
path = "test/order_test_configuration.rs"

[dependencies]
order-domain-core = { path = "../domain-core" }
common = { path = "../../../common" }
getset = "0.1.2"
uuid = { version = "1.10.0", features = ["v7", "serde"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
derive_builder = "0.20.0"
serde = { version = "1.0.204", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
async-trait = "0.1.81"


[dev-dependencies]
mockall = "0.12.1"