[package]
name = "order-domain-core"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../../../common" }
getset = "0.1.2"
uuid = { version = "1.10.0", features = ["v7", "serde"] }
bigdecimal = "0.4.5"
chrono = { version = "0.4.38", features = ["serde"] }
